--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,6 +5,12 @@ on:
     branches: [ main, master ]
   pull_request:
 
+permissions:
+  contents: read
+  checks: write
+  pull-requests: write
+
+
 jobs:
   backend-tests:
     name: JUnit (Maven)
