--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,8 +21,8 @@ jobs:
         ports: ["5432:5432"]
         env:
           POSTGRES_USER: postgres
-          POSTGRES_PASSWORD: postgres
-          POSTGRES_DB: arreglaya
+          POSTGRES_PASSWORD: root
+          POSTGRES_DB: ArreglaYaBackend
         options: >-
           --health-cmd="pg_isready -U postgres"
           --health-interval=10s
