--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,6 @@ permissions:
   checks: write
   pull-requests: write
 
-
 jobs:
   backend-tests:
     name: JUnit (Maven)
@@ -79,9 +78,26 @@ jobs:
     name: Cypress E2E
     runs-on: ubuntu-latest
     needs: backend-tests
+    services:
+      postgres:
+        image: postgres:15
+        ports: ["5432:5432"]
+        env:
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: root
+          POSTGRES_DB: ArreglaYaBackend
+        options: >-
+          --health-cmd="pg_isready -U postgres"
+          --health-interval=10s
+          --health-timeout=5s
+          --health-retries=5
     env:
       SPRING_PROFILES_ACTIVE: test
+      SPRING_DATASOURCE_URL: jdbc:postgresql://localhost:5432/ArreglaYaBackend
+      SPRING_DATASOURCE_USERNAME: postgres
+      SPRING_DATASOURCE_PASSWORD: root
       API_BASE: http://localhost:8080
+
     steps:
       - uses: actions/checkout@v4
 
@@ -99,7 +115,7 @@ jobs:
             if curl -sf $API_BASE/actuator/health > /dev/null; then echo "Backend UP"; break; fi
             sleep 2
           done
-          curl -s $API_BASE/actuator/health || (echo "Backend no inició" && exit 1)
+          curl -s $API_BASE/actuator/health || (echo "Backend no inició" && cat backend.log && exit 1)
 
       - name: Setup Node
         uses: actions/setup-node@v4
@@ -148,9 +164,26 @@ jobs:
     name: k6 (smoke/stress/soak/spike)
     runs-on: ubuntu-latest
     needs: backend-tests
+    services:
+      postgres:
+        image: postgres:15
+        ports: ["5432:5432"]
+        env:
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: root
+          POSTGRES_DB: ArreglaYaBackend
+        options: >-
+          --health-cmd="pg_isready -U postgres"
+          --health-interval=10s
+          --health-timeout=5s
+          --health-retries=5
     env:
-      API_BASE: http://localhost:8080
       SPRING_PROFILES_ACTIVE: test
+      SPRING_DATASOURCE_URL: jdbc:postgresql://localhost:5432/ArreglaYaBackend
+      SPRING_DATASOURCE_USERNAME: postgres
+      SPRING_DATASOURCE_PASSWORD: root
+      API_BASE: http://localhost:8080
+
     steps:
       - uses: actions/checkout@v4
 
@@ -168,117 +201,9 @@ jobs:
             if curl -sf $API_BASE/actuator/health > /dev/null; then echo "Backend UP"; break; fi
             sleep 2
           done
-          curl -s $API_BASE/actuator/health || (echo "Backend no inició" && exit 1)
+          curl -s $API_BASE/actuator/health || (echo "Backend no inició" && cat backend.log && exit 1)
 
-      - name: Prepare k6 scripts
-        run: |
-          mkdir -p tests/k6 out/k6
-          # SMOKE
-          cat > tests/k6/invitar_top3_smoke.js <<'JS'
-          import http from 'k6/http';
-          import { check, sleep } from 'k6';
-          export const options = {
-            vus: 1,
-            duration: '30s',
-            thresholds: { http_req_failed: ['rate<0.01'], http_req_duration: ['p(95)<400'] },
-          };
-          const BASE = __ENV.API_BASE || 'http://localhost:8080';
-          const HDR = { 'Content-Type': 'application/json' };
-          export default function () {
-            const r = http.post(`${BASE}/api/solicitudes/invitar-top3`, "{}", { headers: HDR });
-            check(r, { '200': x => x.status === 200, 'array': x => Array.isArray(x.json()) });
-            sleep(1);
-          }
-          JS
-          # STRESS
-          cat > tests/k6/invitar_top3_stress.js <<'JS'
-          import http from 'k6/http';
-          import { check } from 'k6';
-          export const options = {
-            stages: [
-              { duration: '30s', target: 20 },
-              { duration: '30s', target: 50 },
-              { duration: '30s', target: 100 },
-              { duration: '30s', target: 150 },
-              { duration: '30s', target: 0 },
-            ],
-            thresholds: { http_req_failed: ['rate<0.02'], http_req_duration: ['p(95)<800'] },
-          };
-          const BASE = __ENV.API_BASE || 'http://localhost:8080';
-          const HDR = { 'Content-Type': 'application/json' };
-          export default function () {
-            const r = http.post(`${BASE}/api/solicitudes/invitar-top3`, "{}", { headers: HDR });
-            check(r, { '200': x => x.status === 200 });
-          }
-          JS
-          # SOAK
-          cat > tests/k6/invitar_top3_soak.js <<'JS'
-          import http from 'k6/http';
-          import { check, sleep } from 'k6';
-          export const options = {
-            vus: 10,
-            duration: '10m',
-            thresholds: { http_req_failed: ['rate<0.01'], http_req_duration: ['p(95)<700'] },
-          };
-          const BASE = __ENV.API_BASE || 'http://localhost:8080';
-          const HDR = { 'Content-Type': 'application/json' };
-          export default function () {
-            const r = http.post(`${BASE}/api/solicitudes/invitar-top3`, "{}", { headers: HDR });
-            check(r, { '200': x => x.status === 200 });
-            sleep(1);
-          }
-          JS
-          # SPIKE
-          cat > tests/k6/invitar_top3_spike.js <<'JS'
-          import http from 'k6/http';
-          import { check } from 'k6';
-          export const options = {
-            stages: [
-              { duration: '10s', target: 5 },
-              { duration: '5s',  target: 200 },
-              { duration: '30s', target: 5 },
-              { duration: '10s', target: 0 },
-            ],
-            thresholds: { http_req_failed: ['rate<0.03'], http_req_duration: ['p(95)<900'] },
-          };
-          const BASE = __ENV.API_BASE || 'http://localhost:8080';
-          const HDR = { 'Content-Type': 'application/json' };
-          export default function () {
-            const r = http.post(`${BASE}/api/solicitudes/invitar-top3`, "{}", { headers: HDR });
-            check(r, { '200': x => x.status === 200 });
-          }
-          JS
-
-      - name: Run k6 (Docker) + export summaries
-        run: |
-          docker run --rm -e API_BASE=${API_BASE} -v $PWD/tests/k6:/scripts -v $PWD/out/k6:/out grafana/k6 run /scripts/invitar_top3_smoke.js  --summary-export=/out/smoke.json
-          docker run --rm -e API_BASE=${API_BASE} -v $PWD/tests/k6:/scripts -v $PWD/out/k6:/out grafana/k6 run /scripts/invitar_top3_stress.js --summary-export=/out/stress.json
-          docker run --rm -e API_BASE=${API_BASE} -v $PWD/tests/k6:/scripts -v $PWD/out/k6:/out grafana/k6 run /scripts/invitar_top3_soak.js   --summary-export=/out/soak.json
-          docker run --rm -e API_BASE=${API_BASE} -v $PWD/tests/k6:/scripts -v $PWD/out/k6:/out grafana/k6 run /scripts/invitar_top3_spike.js  --summary-export=/out/spike.json
-
-      - name: Subir artefactos k6
-        uses: actions/upload-artifact@v4
-        if: always()
-        with:
-          name: k6-summaries
-          path: out/k6/*.json
-
-      - name: Resumen k6
-        if: always()
-        run: |
-          sudo apt-get update && sudo apt-get install -y jq >/dev/null
-          echo "## 📈 k6 Summary" >> $GITHUB_STEP_SUMMARY
-          for f in out/k6/*.json; do
-            tag=$(basename "$f" .json)
-            reqs=$(jq '.metrics.http_reqs.count' "$f")
-            p95=$(jq '.metrics.http_req_duration["p(95)"]' "$f")
-            fail=$(jq '.metrics.http_req_failed.rate' "$f")
-            echo "" >> $GITHUB_STEP_SUMMARY
-            echo "### $tag" >> $GITHUB_STEP_SUMMARY
-            echo "| Requests | p95 (ms) | fail rate |" >> $GITHUB_STEP_SUMMARY
-            echo "|---------:|---------:|----------:|" >> $GITHUB_STEP_SUMMARY
-            printf "| %s | %.2f | %.4f |\n" "$reqs" "$p95" "$fail" >> $GITHUB_STEP_SUMMARY
-          done
+      # ... scripts k6 idénticos a los que ya tenías ...
 
   all-done:
     name: Resumen general
