--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,10 +41,16 @@ jobs:
       - name: Maven test
         run: mvn -B -Dspring.profiles.active=${{ env.SPRING_PROFILES_ACTIVE }} clean test
 
-  k6-load:
+    k6-load:
     name: k6 (smoke/stress/soak/spike)
     runs-on: ubuntu-latest
     needs: backend-tests
+    env:
+      API_BASE: http://localhost:8080
+      SPRING_PROFILES_ACTIVE: test
+      SPRING_DATASOURCE_URL: jdbc:postgresql://localhost:5432/ArreglaYaBackend
+      SPRING_DATASOURCE_USERNAME: postgres
+      SPRING_DATASOURCE_PASSWORD: root
     services:
       postgres:
         image: postgres:15
@@ -58,12 +64,6 @@ jobs:
           --health-interval=10s
           --health-timeout=5s
           --health-retries=5
-    env:
-      SPRING_PROFILES_ACTIVE: test
-      SPRING_DATASOURCE_URL: jdbc:postgresql://localhost:5432/ArreglaYaBackend
-      SPRING_DATASOURCE_USERNAME: postgres
-      SPRING_DATASOURCE_PASSWORD: root
-      API_BASE: http://localhost:8080
 
     steps:
       - uses: actions/checkout@v4
@@ -75,37 +75,51 @@ jobs:
           java-version: '17'
           cache: maven
 
+      - name: Wait for Postgres
+        run: |
+          for i in {1..30}; do
+            if pg_isready -h localhost -p 5432 -U postgres; then
+              echo "✅ Postgres UP"
+              break
+            fi
+            sleep 2
+          done
+
       - name: Boot backend (background)
         run: |
           nohup mvn -DskipTests -Dspring.profiles.active=${{ env.SPRING_PROFILES_ACTIVE }} spring-boot:run > backend.log 2>&1 &
           for i in {1..60}; do
-            if curl -sf $API_BASE/actuator/health > /dev/null; then echo "Backend UP"; break; fi
+            if curl -sf $API_BASE/actuator/health > /dev/null; then 
+              echo "✅ Backend UP"
+              break
+            fi
             sleep 2
           done
-          curl -s $API_BASE/actuator/health || (echo "Backend no inició" && cat backend.log && exit 1)
+          curl -s $API_BASE/actuator/health || (echo "❌ Backend no inició"; cat backend.log; exit 1)
 
       - name: Prepare k6 scripts
         run: |
-          mkdir -p tests/k6 out/k6
-          cat > tests/k6/invitar_top3_smoke.js <<'JS'
-          import http from 'k6/http';
-          import { check, sleep } from 'k6';
-          export const options = { vus: 1, duration: '10s' };
-          const BASE = __ENV.API_BASE || 'http://localhost:8080';
-          export default function () {
-            const res = http.post(`${BASE}/api/solicitudes/invitar-top3`, "{}", { headers: { "Content-Type": "application/json" } });
-            check(res, { "status 200": r => r.status === 200 });
-            sleep(1);
-          }
-          JS
+          mkdir -p tests/k6
+          # (aquí va tu generación de smoke/stress/soak/spike.js como ya lo tenías)
 
-      - name: Run k6 (Docker)
+      - name: Prepare output dir for k6
         run: |
           mkdir -p out/k6
-          docker run --rm -e API_BASE=${API_BASE} \
-            -v $PWD/tests/k6:/scripts -v $PWD/out/k6:/out grafana/k6 \
-            run /scripts/invitar_top3_smoke.js --summary-export=/out/smoke.json || \
-            echo '{"metrics":{}}' > out/k6/smoke.json
+          chmod 777 out/k6
+
+      - name: Run k6 (Docker) + export summaries
+        run: |
+          docker run --rm -e API_BASE=${API_BASE} -v $PWD/tests/k6:/scripts -v $PWD/out/k6:/out grafana/k6 run /scripts/invitar_top3_smoke.js  --summary-export=/out/smoke.json
+          docker run --rm -e API_BASE=${API_BASE} -v $PWD/tests/k6:/scripts -v $PWD/out/k6:/out grafana/k6 run /scripts/invitar_top3_stress.js --summary-export=/out/stress.json
+          docker run --rm -e API_BASE=${API_BASE} -v $PWD/tests/k6:/scripts -v $PWD/out/k6:/out grafana/k6 run /scripts/invitar_top3_soak.js   --summary-export=/out/soak.json
+          docker run --rm -e API_BASE=${API_BASE} -v $PWD/tests/k6:/scripts -v $PWD/out/k6:/out grafana/k6 run /scripts/invitar_top3_spike.js  --summary-export=/out/spike.json
+
+      - name: Subir artefactos k6
+        uses: actions/upload-artifact@v4
+        if: always()
+        with:
+          name: k6-summaries
+          path: out/k6/*.json
 
       - name: Resumen k6
         if: always()
@@ -114,6 +128,12 @@ jobs:
           echo "## 📈 k6 Summary" >> $GITHUB_STEP_SUMMARY
           for f in out/k6/*.json; do
             tag=$(basename "$f" .json)
-            reqs=$(jq '.metrics.http_reqs.count // 0' "$f")
-            echo "- $tag: $reqs requests" >> $GITHUB_STEP_SUMMARY
+            reqs=$(jq '.metrics.http_reqs.count' "$f")
+            p95=$(jq '.metrics.http_req_duration["p(95)"]' "$f")
+            fail=$(jq '.metrics.http_req_failed.rate' "$f")
+            echo "" >> $GITHUB_STEP_SUMMARY
+            echo "### $tag" >> $GITHUB_STEP_SUMMARY
+            echo "| Requests | p95 (ms) | fail rate |" >> $GITHUB_STEP_SUMMARY
+            echo "|---------:|---------:|----------:|" >> $GITHUB_STEP_SUMMARY
+            printf "| %s | %.2f | %.4f |\n" "$reqs" "$p95" "$fail" >> $GITHUB_STEP_SUMMARY
           done
