--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,16 +41,10 @@ jobs:
       - name: Maven test
         run: mvn -B -Dspring.profiles.active=${{ env.SPRING_PROFILES_ACTIVE }} clean test
 
-    k6-load:
+  k6-load:
     name: k6 (smoke/stress/soak/spike)
     runs-on: ubuntu-latest
     needs: backend-tests
-    env:
-      API_BASE: http://localhost:8080
-      SPRING_PROFILES_ACTIVE: test
-      SPRING_DATASOURCE_URL: jdbc:postgresql://localhost:5432/ArreglaYaBackend
-      SPRING_DATASOURCE_USERNAME: postgres
-      SPRING_DATASOURCE_PASSWORD: root
     services:
       postgres:
         image: postgres:15
@@ -64,6 +58,12 @@ jobs:
           --health-interval=10s
           --health-timeout=5s
           --health-retries=5
+    env:
+      SPRING_PROFILES_ACTIVE: test
+      SPRING_DATASOURCE_URL: jdbc:postgresql://localhost:5432/ArreglaYaBackend
+      SPRING_DATASOURCE_USERNAME: postgres
+      SPRING_DATASOURCE_PASSWORD: root
+      API_BASE: http://localhost:8080
 
     steps:
       - uses: actions/checkout@v4
@@ -75,44 +75,88 @@ jobs:
           java-version: '17'
           cache: maven
 
-      - name: Wait for Postgres
-        run: |
-          for i in {1..30}; do
-            if pg_isready -h localhost -p 5432 -U postgres; then
-              echo "✅ Postgres UP"
-              break
-            fi
-            sleep 2
-          done
-
       - name: Boot backend (background)
         run: |
           nohup mvn -DskipTests -Dspring.profiles.active=${{ env.SPRING_PROFILES_ACTIVE }} spring-boot:run > backend.log 2>&1 &
           for i in {1..60}; do
-            if curl -sf $API_BASE/actuator/health > /dev/null; then 
-              echo "✅ Backend UP"
-              break
-            fi
+            if curl -sf $API_BASE/actuator/health > /dev/null; then echo "Backend UP"; break; fi
             sleep 2
           done
-          curl -s $API_BASE/actuator/health || (echo "❌ Backend no inició"; cat backend.log; exit 1)
+          curl -s $API_BASE/actuator/health || (echo "Backend no inició" && cat backend.log && exit 1)
 
       - name: Prepare k6 scripts
         run: |
-          mkdir -p tests/k6
-          # (aquí va tu generación de smoke/stress/soak/spike.js como ya lo tenías)
+          mkdir -p tests/k6 out/k6
+          # SMOKE
+          cat > tests/k6/smoke.js <<'JS'
+          import http from 'k6/http';
+          import { check, sleep } from 'k6';
+          export const options = { vus: 1, duration: '10s' };
+          const BASE = __ENV.API_BASE;
+          export default function () {
+            const r = http.post(`${BASE}/api/solicitudes/invitar-top3`, "{}", { headers: { "Content-Type": "application/json" } });
+            check(r, { "status 200": x => x.status === 200 });
+            sleep(1);
+          }
+          JS
+          # STRESS
+          cat > tests/k6/stress.js <<'JS'
+          import http from 'k6/http';
+          import { check } from 'k6';
+          export const options = {
+            stages: [
+              { duration: '20s', target: 20 },
+              { duration: '20s', target: 50 },
+              { duration: '20s', target: 100 },
+              { duration: '20s', target: 0 },
+            ],
+          };
+          const BASE = __ENV.API_BASE;
+          export default function () {
+            const r = http.post(`${BASE}/api/solicitudes/invitar-top3`, "{}", { headers: { "Content-Type": "application/json" } });
+            check(r, { "status 200": x => x.status === 200 });
+          }
+          JS
+          # SOAK
+          cat > tests/k6/soak.js <<'JS'
+          import http from 'k6/http';
+          import { check, sleep } from 'k6';
+          export const options = { vus: 10, duration: '2m' };
+          const BASE = __ENV.API_BASE;
+          export default function () {
+            const r = http.post(`${BASE}/api/solicitudes/invitar-top3`, "{}", { headers: { "Content-Type": "application/json" } });
+            check(r, { "status 200": x => x.status === 200 });
+            sleep(1);
+          }
+          JS
+          # SPIKE
+          cat > tests/k6/spike.js <<'JS'
+          import http from 'k6/http';
+          import { check } from 'k6';
+          export const options = {
+            stages: [
+              { duration: '5s', target: 5 },
+              { duration: '5s', target: 200 },
+              { duration: '10s', target: 5 },
+              { duration: '5s', target: 0 },
+            ],
+          };
+          const BASE = __ENV.API_BASE;
+          export default function () {
+            const r = http.post(`${BASE}/api/solicitudes/invitar-top3`, "{}", { headers: { "Content-Type": "application/json" } });
+            check(r, { "status 200": x => x.status === 200 });
+          }
+          JS
 
-      - name: Prepare output dir for k6
+      - name: Run k6 (Docker)
         run: |
           mkdir -p out/k6
-          chmod 777 out/k6
-
-      - name: Run k6 (Docker) + export summaries
-        run: |
-          docker run --rm -e API_BASE=${API_BASE} -v $PWD/tests/k6:/scripts -v $PWD/out/k6:/out grafana/k6 run /scripts/invitar_top3_smoke.js  --summary-export=/out/smoke.json
-          docker run --rm -e API_BASE=${API_BASE} -v $PWD/tests/k6:/scripts -v $PWD/out/k6:/out grafana/k6 run /scripts/invitar_top3_stress.js --summary-export=/out/stress.json
-          docker run --rm -e API_BASE=${API_BASE} -v $PWD/tests/k6:/scripts -v $PWD/out/k6:/out grafana/k6 run /scripts/invitar_top3_soak.js   --summary-export=/out/soak.json
-          docker run --rm -e API_BASE=${API_BASE} -v $PWD/tests/k6:/scripts -v $PWD/out/k6:/out grafana/k6 run /scripts/invitar_top3_spike.js  --summary-export=/out/spike.json
+          for script in smoke stress soak spike; do
+            docker run --rm -e API_BASE=${API_BASE} \
+              -v $PWD/tests/k6:/scripts -v $PWD/out/k6:/out grafana/k6 \
+              run /scripts/$script.js --summary-export=/out/$script.json || \
+              echo '{"metrics":{}}' > out/k6/$script.json
+          done
 
       - name: Subir artefactos k6
         uses: actions/upload-artifact@v4
@@ -128,12 +172,12 @@ jobs:
           echo "## 📈 k6 Summary" >> $GITHUB_STEP_SUMMARY
           for f in out/k6/*.json; do
             tag=$(basename "$f" .json)
-            reqs=$(jq '.metrics.http_reqs.count' "$f")
-            p95=$(jq '.metrics.http_req_duration["p(95)"]' "$f")
-            fail=$(jq '.metrics.http_req_failed.rate' "$f")
+            reqs=$(jq '.metrics.http_reqs.count // 0' "$f")
+            p95=$(jq '.metrics.http_req_duration["p(95)"] // 0' "$f")
+            fail=$(jq '.metrics.http_req_failed.rate // 0' "$f")
             echo "" >> $GITHUB_STEP_SUMMARY
             echo "### $tag" >> $GITHUB_STEP_SUMMARY
-            echo "| Requests | p95 (ms) | fail rate |" >> $GITHUB_STEP_SUMMARY
+            echo "| Requests | p95 (ms) | Fail rate |" >> $GITHUB_STEP_SUMMARY
             echo "|---------:|---------:|----------:|" >> $GITHUB_STEP_SUMMARY
             printf "| %s | %.2f | %.4f |\n" "$reqs" "$p95" "$fail" >> $GITHUB_STEP_SUMMARY
           done
