--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,4 @@ logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 server.port=${SERVER_PORT:80}
 management.endpoints.web.exposure.include=health,info
 management.endpoint.health.probes.enabled=true
+management.endpoint.health.show-details=always
