--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=ArreglaYaBackend
-spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/ArreglaYaBackend}
-spring.datasource.username=${SPRING_DATASOURCE_USERNAME:postgres}
-spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:root}
+spring.datasource.url=jdbc:postgresql://localhost:5432/ArreglaYaBackend
+spring.datasource.username=postgres
+spring.datasource.password=12345
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=create
@@ -10,7 +10,3 @@ spring.sql.init.mode=always
 spring.sql.init.continue-on-error=true
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
-server.port=${SERVER_PORT:80}
-management.endpoints.web.exposure.include=health,info
-management.endpoint.health.probes.enabled=true
-management.endpoint.health.show-details=always
