--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -301,6 +301,12 @@ jobs:
           mkdir -p out/cypress
           npx cypress run || true
 
+      - name: Debug Cypress output
+        if: always()
+        run: |
+          echo "Buscando results.json en todo el repo..."
+          find . -type f -name "results.json"
+
       - name: Subir artefactos Cypress
         uses: actions/upload-artifact@v4
         if: always()
