--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "devDependencies": {
     "cypress": "^13.17.0",
     "cypress-json-results": "^1.5.0",
+    "mochawesome": "^7.1.4",
+    "mochawesome-merge": "^5.0.0",
+    "mochawesome-report-generator": "^6.3.0",
     "start-server-and-test": "^2.1.0"
   },
   "scripts": {
