--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "devDependencies": {
     "cypress": "^13.17.0",
     "cypress-json-results": "^1.5.0",
+    "mocha-json-reporter": "^1.0.0-1",
     "mochawesome": "^7.1.4",
     "mochawesome-merge": "^5.0.0",
     "mochawesome-report-generator": "^6.3.0",
